--- a/data/ui/gsm-window.ui
+++ b/data/ui/gsm-window.ui
@@ -7,6 +7,7 @@
     <property name="width_request">800</property>
     <property name="height_request">500</property>
     <property name="can_focus">False</property>
+    <property name="icon_name">gnome-scanmem</property>
     <child>
       <object class="GtkRevealer" id="revealer1">
         <property name="visible">True</property>
